<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_category"
            android:checked="true"
            android:icon="@drawable/ic_drawer_category"
            android:title="@string/drawer_category" />

        <item
            android:id="@+id/drawer_recent"
            android:icon="@drawable/ic_drawer_recent"
            android:title="@string/drawer_new_recipes" />

        <item
            android:id="@+id/drawer_favorite"
            android:icon="@drawable/ic_drawer_favorite"
            android:title="@string/drawer_favorite" />

    </group>


<group>

</group>

<item android:title="@string/drawer_sub_row">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/drawer_rate"
                    android:icon="@drawable/ic_drawer_rate"
                    android:title="@string/drawer_rate" />
<!--
                <item
                    android:id="@+id/drawer_more"
                    android:icon="@drawable/ic_drawer_more"
                    android:title="@string/drawer_more" />
-->
                <item
                    android:id="@+id/drawer_share"
                    android:icon="@drawable/ic_share"
                    android:title="@string/drawer_share"
                    android:visible="true" />

                <item
                    android:id="@+id/drawer_about"
                    android:icon="@drawable/ic_drawer_info"
                    android:title="@string/drawer_about" />

            </group>

        </menu>

    </item>

</menu>